#
#############################################################################

########## RECENT CHANGE-LOG #########

  Note that we version STiki by the date (UTC locale) of the build-date. This
  is also the file-name under which the executable/source is released. The 
  formal version number (e.g., 2.1) is in too many places to be 
  conveniently altered for small changes:
  
  * 2014-XX-XX
      = Need to update the pre-formatted AGF messages
      = Need to fix a problem pertaining to null diffs being displayed
  
  * 2014-03-25
      # Emergency release in order to fix login code broken by a small
        WMF change (most of the burden probably falls to STiki for getting
        this incorrect). This update will be forced; that is, older versions
        of the STiki software will show an "upgrade required" message.
      # Changed the "Revision Filter" menu title to "Displayed Edits"
        in order to clear up some abiguity over sub-menu items.
  
  * 2014-02-05
      # The colors and font faces used in the diff presentation panel can
        now be changed via the "options" menu (T#037).
      # Per user request, larger font size options were made available (T#035).
      # Plurality switches ("#s#") are now utilized in the default AGF 
        messages, making them more customized to specific revert 
        cirumstances. Articles are also now linked in default AGF messages.
      # The WMF changed diff representation format, sending our
        parser into infinite loops on the back-end; eventually exhausting
        threads and halting edit ingestion. On the front-end, this caused 
        some diffs to be mis-colored. The parser was fixed in both cases.
  
  * 2013-11-30
      # The "user talk" link which appears in the "metadata" and "last 
        revert" panels has been modified so it is appropriately blue/red 
        based on the existence of that page. (T#034)
      # A new substitution, "#p#", is available for use when authoring 